# Lengine-core

./: CMakeLists.txt  config.json
assets/Shaders/: deferredPBRLighting.frag  deferredPBRLighting.vert  geometry.frag  geometry.vert  pbr.frag  pbr.glsl  pbr.vert
src/animations/: AnimationSystem.cpp  AnimationSystem.h
src/assets/: AssetRegistry.h  ShaderRegistry.h  TextureRegistry.h
src/core/: EngineCore.cpp  EngineCore.h  paths.h  settings.cpp  settings.h
src/graphics/camera/: Camera3d.cpp  Camera3d.h
src/graphics/frameBuffers/: FrameBuffer.cpp  FrameBuffer.h
src/graphics/geometry/: FullScreenQuad.cpp  ray.h
src/graphics/opengl/: GLSLProgram.cpp  GLSLProgram.h
src/graphics/renderer/: DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  RenderPipeline.cpp  RenderPipeline.h
src/graphics/shadowMaps/: shadowCubeMap.cpp  shadowCubeMap.h  shadowMap.cpp  shadowMap.h
src/input/: ControllerSystem.cpp  ControllerSystem.h  GameController.h  GameEvent.h  GameEventSystem.h  InputContext.h  InputManager.cpp  InputManager.h  InputRouter.h  KeyBindings.h  MovementSystem.cpp  MovementSystem.h  PlayerInputHandler.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/platform/: Window.cpp
src/resources/: AssetImporter.cpp  AssetManager.cpp  AssetManager.h  ImageLoader.h
src/scene/: ECSRegistry.h  Entity.h  Prefab.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/scene/components/: AnimatonComponent.h  ComponentStorage.h  ControllerComponent.h  Hierarchy.h  Light.h  MeshFilter.h  MovementComponent.h  NameTagComponent.h  RigidBodyComponent.h  ScriptComponent.h  SkeletonComponent.h  Transform.h
src/scripting/: ScriptLibrary.h  ScriptMetadata.h  ScriptSystem.cpp  ScriptSystem.h  ScriptableEntity.h
src/transform/: TransformSystem.h  TrasformSystem.cpp
src/utils/: Profiler.h
